--- a/.github/workflows/post.yml
+++ b/.github/workflows/post.yml
@@ -9,6 +9,8 @@ jobs:
   build:
     name: build
     runs-on: ubuntu-latest
+    working-directory: ./whatisand-blog
+
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js 10.x
@@ -18,11 +20,14 @@ jobs:
       - name: Cache node_modules
         uses: actions/cache@v1
         with:
-          path: node_modules
+          path: /whatisand-blog/node_modules
           key: ${{runner.OS}}-build-${{hashFiles('**/package-lock.json')}}
           restore-keys: |
             ${{ runner.OS }}-build-${{ runner.OS }}-
       - name: Install node packages
         run: npm install
+        working-directory: ${{ env.working-directory }}
       - name: build
         run: npm run deploy-gh-prefix-paths
+        working-directory: ${{ env.working-directory }}
+
