--- a/.github/workflows/post.yml
+++ b/.github/workflows/post.yml
@@ -22,11 +22,10 @@ jobs:
       - name: Cache node_modules
         uses: actions/cache@v1
         with:
-          path: ./node_modules
+          path: ./whatisand-blog/node_modules
           key: ${{runner.OS}}-build-${{hashFiles('**/whatisand-blog/package-lock.json')}}
           restore-keys: |
             ${{ runner.OS }}-build-${{ runner.OS }}-
-        working-directory: ${{ env.working-directory }}
       - name: Install node packages
         run: npm install
         working-directory: ${{ env.working-directory }}
