--- a/.github/workflows/post.yml
+++ b/.github/workflows/post.yml
@@ -34,5 +34,6 @@ jobs:
         working-directory: ${{ env.working-directory }}
       - uses: peaceiris/actions-gh-pages@v2
         env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
           PUBLISH_BRANCH: gh-pages
           PUBLISH_DIR: ./whatisand-blog/public
