--- a/.github/workflows/post.yml
+++ b/.github/workflows/post.yml
@@ -33,7 +33,7 @@ jobs:
         run: npm run build-prefix-paths
         working-directory: ${{ env.working-directory }}
       - uses: peaceiris/actions-gh-pages@v2
-        env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+        with:
+          github_token: ${{ secrets.TOKEN }}
           PUBLISH_BRANCH: gh-pages
           PUBLISH_DIR: ./whatisand-blog/public
