--- a/.github/workflows/post.yml
+++ b/.github/workflows/post.yml
@@ -34,6 +34,6 @@ jobs:
         working-directory: ${{ env.working-directory }}
       - uses: peaceiris/actions-gh-pages@v2
         with:
-          github_token: ${{ secrets.TOKEN }}
+          PERSONAL_TOKEN: ${{ secrets.TOKEN }}
           PUBLISH_BRANCH: gh-pages
           PUBLISH_DIR: ./whatisand-blog/public
